--- a/pilot_run_plan_view_GUI.glade
+++ b/pilot_run_plan_view_GUI.glade
@@ -64,6 +64,19 @@
                 <property name="position">2</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkButton" id="analyze_data_button">
+                <property name="label" translatable="yes">Run Analysis</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
